# agency-lead-pipeline

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
examples/: agency_directory_urls.txt  clutch_urls.txt
src/agency_lead_pipeline/: __init__.py  cli.py  clutch.py  config.py  contacts.py  dedupe.py  email_utils.py  generic_directory.py  geography.py  http_utils.py  models.py  storage.py
tests/: test_cli.py  test_clutch.py  test_config.py  test_contacts.py  test_dedupe.py  test_email_utils.py  test_generic_directory.py  test_geography.py  test_models.py  test_storage.py  test_url_utils.py
