[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agency-lead-pipeline"
version = "0.1.0"
description = "Reusable directory discovery and public contact email extraction pipeline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "playwright>=1.45",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.7",
  "tldextract>=5.1",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
agency-lead-pipeline = "agency_lead_pipeline.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agency_lead_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
